konfiguracja/nginx-prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-prometheus
  namespace: ingress-nginx
spec:
  ports:
  - name: ingress-prometheus
    port: 80
    protocol: TCP
    targetPort: 10254
  selector:
    app: controller-nginx-ingress
  type: ClusterIP
