konfiguracja/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    controller.wallarm.metrics.enabled
spec:
  rules:
    - host: web.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 8000
    - host: api.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rest-api-service
                port:
                  number: 5000
